// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon Component should accept props 1`] = `
<svg
  fill="none"
  height="200px"
  viewBox="0 0 19 19"
  width="200px"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17 2L9.5 9.5m0 0L2 17m7.5-7.5L2 2m7.5 7.5L17 17"
    stroke="#828282"
    strokeWidth="3.089"
  />
</svg>
`;

exports[`CloseIcon Component should match snapshot 1`] = `
<svg
  fill="none"
  height="19"
  viewBox="0 0 19 19"
  width="19"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17 2L9.5 9.5m0 0L2 17m7.5-7.5L2 2m7.5 7.5L17 17"
    stroke="#828282"
    strokeWidth="3.089"
  />
</svg>
`;

exports[`CloseIcon Component should match snapshot with darkTheme 1`] = `
<svg
  fill="none"
  height="19"
  viewBox="0 0 19 19"
  width="19"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17 2L9.5 9.5m0 0L2 17m7.5-7.5L2 2m7.5 7.5L17 17"
    stroke="#828282"
    strokeWidth="3.089"
  />
</svg>
`;

exports[`CloseIcon Component should match snapshot with lightTheme 1`] = `
<svg
  fill="none"
  height="19"
  viewBox="0 0 19 19"
  width="19"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M17 2L9.5 9.5m0 0L2 17m7.5-7.5L2 2m7.5 7.5L17 17"
    stroke="#828282"
    strokeWidth="3.089"
  />
</svg>
`;
